--- a/client/views/UserInfo.html
+++ b/client/views/UserInfo.html
@@ -1,5 +1,24 @@
 <section ng-controller="UserInfo" >
     <div class="topTenSkills col-md-8 col-md-offset-2">
-     INFO: {{ApplicantInfo}}
+        <ul ng-repeat="param in ApplicantInfo">
+            <h4>{{param.username}} {{param.name}}</h4>
+            <h4>Education :</h4>
+            <ul ng-repeat="paramEd in param.education">
+                <h4>{{paramEd.place}} </h4>
+                <li>speciality: {{paramEd.speciality}}</li>
+                <li>Start: {{paramEd.dateStart}}</li>
+                <li>Finish: {{paramEd.dateFinish}}</li>
+            </ul>
+            <h4>Employment:</h4>
+            <ul ng-repeat="paramEmp in param.employments">
+                <h4>{{paramEmp.company}} </h4>
+                <li>position: {{paramEmp.position}}</li> 
+                <li>responsibility: {{paramEmp.responsibility}}</li>
+                <li>Start: {{paramEmp.dateStart}}</li>
+                <li>Finish: {{paramEmp.dateFinish}}</li>
+            </ul>
+        </ul>
+        <br>
+        {{ApplicantInfo}}
     </div>    
 </section>
